--- a/build.gradle
+++ b/build.gradle
@@ -28,22 +28,43 @@ tasks.withType(JavaCompile) {
     options.encoding = "UTF-8"
 }
 
+ext {
+    slf4jVersion = '1.7.7'
+    serenityCoreVersion = '3.3.2'
+    serenityCucumberVersion = '3.3.2'
+    junitVersion = '4.13.2'
+    assertJVersion = '3.23.1'
+    logbackVersion = '1.2.11'
+    jacksonAnnotations = "2.13.3"
+    VerionAssured = '3.3.4'
+    Veriondatatype = '2.13.4'
+    lombokVersion = '1.18.28'
+    Versionfillo = '1.21'
+    lombokVersion = '1.18.28'
+}
+
 dependencies {
-    implementation('net.serenity-bdd:serenity-core:4.1.15')
-    implementation('net.serenity-bdd:serenity-junit:4.1.15')
-    implementation('net.serenity-bdd:serenity-screenplay:4.1.15')
-    implementation('net.serenity-bdd:serenity-screenplay-webdriver:4.1.15')
-    testImplementation('junit:junit:4.13.2')
-    testImplementation('net.serenity-bdd:serenity-cucumber:4.1.15')
+    implementation "net.serenity-bdd:serenity-core:${serenityCoreVersion}",
+            "net.serenity-bdd:serenity-cucumber:${serenityCucumberVersion}",
+            "net.serenity-bdd:serenity-screenplay:${serenityCoreVersion}",
+            "net.serenity-bdd:serenity-screenplay-webdriver:${serenityCoreVersion}",
+            "net.serenity-bdd:serenity-ensure:${serenityCoreVersion}",
+            "com.fasterxml.jackson.core:jackson-annotations:${jacksonAnnotations}",
+            "com.fasterxml.jackson.core:jackson-databind:${jacksonAnnotations}",
+            "junit:junit:${junitVersion}",
+            "org.assertj:assertj-core:${assertJVersion}",
+            "net.serenity-bdd:serenity-rest-assured:${serenityCoreVersion}",
+            "net.serenity-bdd:serenity-screenplay-rest:${VerionAssured}",
+            "com.fasterxml.jackson.datatype:jackson-datatype-jdk8:${Veriondatatype}",
+            "io.rest-assured:json-schema-validator:4.3.1",
+            "org.json:json:20210307"
 }
 
-tasks.withType(JavaCompile) {
-    options.encoding = 'UTF-8'
-}
-
-tasks.withType(Test) {
-    systemProperties = System.properties
-    maxParallelForks = Runtime.runtime.availableProcessors()
+serenity {
+    // Specify the root directory of any Cucumber feature files
+    requirementsDir = "src/test/resources/features"
 }
 
 gradle.startParameter.continueOnFailure = true
+
+test.finalizedBy(aggregate)
