Se suben los cambios ignorados por intellij

--- a/serenity.properties
+++ b/serenity.properties
@@ -1,2 +1,2 @@
 webdriver.chrome.driver= src/test/resources/drivers/chromedriver.exe
-serenity.compromised.on=co.com.sura.project.exceptions.arl.ManejoDeExcepcion
+serenity.compromised.on=co.com.devsu.certificacion.aplicativodecompras.exceptions.ManejoDeExcepcion
